update index img

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -173,7 +173,8 @@ body{
 
 //---------Box---------
  .box {
-      background-image: url("https://ooo.0o0.ooo/2017/05/31/592ed9ee3cebb.jpg");//背景图片
+      background-image: url("https://ooo.0o0.ooo/2017/06/08/5938ff3a39474.jpg");//背景图片
+      //https://ooo.0o0.ooo/2017/05/31/592ed9ee3cebb.jpg
       background-position: center 60%;//取图的位置
       background-repeat: no-repeat;//是否设置重复背景，不重复
       background-size: cover;//会保持图像本身的宽高比例，将图片缩放到正好完全覆盖定义背景的区域
