--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -15,32 +15,39 @@
       </ur>
   </div>
   <div class="col-md-4 footerlist">
-      <h4>关于我们</h4>
+      <h4 style="margin-right:120px;">联系我们</h4>
       <ul class="list-unstyled">
-        <li>
-          <a href="#s">联系我们</a>
+        <li class="left_text">
+          <a href="#s">✉️：greatjing@sina.cn</a>
         </li>
-        <li>
-          <a href="#s">招贤纳士</a>
+        <li class="left_text">
+          <a href="#s">💻：http://greatjing-blog.logdown.com/</a>
         </li>
-        <li>
-          <a href="#s">意见反馈</a>
+        <li class="left_text">
+          <a href="#s">📮：jinggreat</a>
         </li>
       </ur>
   </div>
 
   <div class="col-md-4 footerlist">
-      <h4 style="margin-right:90px;">请联系我</h4>
       <ul class="list-unstyled">
+        <p>
           <li class="left_text ">
-            <a href="#s">邮箱：greatjing@sina.cn</a>
+            欢迎大家来找QA开发的网站bug，😄
+            <br>
+            🚗&nbsp&nbsp&nbsp这是一个希望所有爱车人都可以有超跑开的租赁平台
           </li>
-          <li class="left_text">
-            <a href="#s">logdown：http://greatjing-blog.logdown.com/</a>
+        </p>
+          <hr style="height:1px;border-width:0;background-color:gray" />
+        <p>
+          <li>
+            <a href="#s"></a>
           </li>
-          <li class="left_text">
-            <a href="#s">微信：jinggreat</a>
-          </li>
+        </p>
+        <li class="left_text">
+          Copyright ©2017 SuperCar Design by greatjing
+        </li>
+
     </ul>
 
       <!-- <img class="img" src='<%= image_url 'email.png' %> '>greatjing@sina.cn -->
@@ -54,11 +61,10 @@
   <!-- <div class="">
     <hr style="height:2px;border-width:0;background-color:gray" />
   </div> -->
-  <div class="footer-below">
+  <!-- <div class="footer-below">
        <p class="text-center">Copyright ©2017 SuperCar Design by greatjing
        </p>
-   </div>
-
+   </div> -->
 
   </div>
 </footer>
