add like car people number

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,6 +31,10 @@
         <% if current_user && current_user.is_like?(@product) %>
           <!-- <img src="https://ooo.0o0.ooo/2017/06/08/5938f9e300828.jpeg" alt="喜欢"> -->
           &nbsp&nbsp&nbsp&nbsp<font color="red">喜欢了，😍</font>
+          <p>
+            <!-- 显示已有多少人喜欢 -->
+            你和<%= @product.liker_number %>个人一样喜欢这款车
+          </p>
         <% else %>
           <%= link_to("喜欢我吗", like_product_path(@product), method: :post, class: "btn btn-primary" ) %>
         <% end %>
