update index page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,17 @@
 <div class="col-md-12">
    <div class="row box">
-     <div class="box-inner col-md-8 col-md-offset-6">
+     <div class="box-inner col-md-4  col-md-offset-8">
+
        <h1 class="title"></h1>
-        <p class="slogan">
+        <p class="slogan">Young people
+          <br>
+          In here, sportcar is only for you
          <br>
+         来挑选一辆超跑吧!
          <br>
        </p>
        <p class="lead">
-         <!-- <%= link_to '马上约车', products_path, class: 'btn btn-info' %> -->
+         <%= link_to '马上约车', products_path, class: 'btn btn-info' %>
        </p>
      </div>
    </div>
@@ -16,14 +20,45 @@
 <div class="row">
   <div class="content-a">
     <div class="row">
-      <div class="col-md-12 text-center">
-        <h3 class="text-align ">超跑不能仅仅是梦想</h3>
-        <p class="text-center">
+
+      <div class="col-md-4 text-center col-md-offset-1">
+        <h3 class="text-align ">超跑梦想俱乐部</h3>
+        <br>
+        <p>
+          提供超跑的租赁的平台<br>
+          主旨是让人人都可以有机会体验超跑的速度和激情；
+          <br>
+          <br>
+        </p>
+        <div>
+          <span>
+            在这里，只要几百块满足你的超跑梦；<br>
+          </span>
+          <span>
+            在这里，提供各种品牌和机型，拥有上千种超跑；<br>
+          </span>
+          <span>
+            在这里，有多家合作跑道并提供高质保险；<br>
+          </span>
+          <br>
+          <h3 class="text-align ">We are here waiting for you！</h3>
+        </div>
+        <!-- <p class="text-center">
           “让爱车的人，都可以有机会体验超跑的速度和激情” <br>
           拥有超跑可能对于普通都只是遥远的梦想，superCar提供租赁平台只要用几百块钱就可实现
-        </p>
-        <img src="https://ooo.0o0.ooo/2017/06/02/59305be80cdf9.jpg" alt="轮胎">
+        </p> -->
+        <!-- <img src="https://ooo.0o0.ooo/2017/06/02/59305be80cdf9.jpg" alt="轮胎"> -->
       </div>
+
+      <div class="col-md-7 text-center">
+        <h3 class="text-align "></h3>
+        <!--<p class="text-center">
+          “让爱车的人，都可以有机会体验超跑的速度和激情” <br>
+          拥有超跑可能对于普通都只是遥远的梦想，superCar提供租赁平台只要用几百块钱就可实现
+        </p> -->
+        <img src="https://ooo.0o0.ooo/2017/06/02/59305be80cdf9.jpg" alt="轮胎" style="margin-left=30px;">
+      </div>
+
     </div>
   </div>
 </div>
