--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -121,26 +121,27 @@ body{
 }
  //---------Navbar---------
  .navbar-default {
-     background-color: #212121;//背景色
-     border-color: #212121; //边框色
+     background-color: #F5F5F5;//背景色
+     //212121233140
+     border-color: #F5F5F5; //边框色
      margin-bottom: 0;//底部外边框无
      border-radius: 0;//向 div元素添加圆角边框
  }
 
  .navbar-default .navbar-brand {
-     color: #FF5722;//字体颜色
+     color: #000000;//字体颜色
      padding: 10px 15px;//那边框上下10px，左右15px
      line-height: 30px;//文字行高
  }
 
  .navbar-default .navbar-brand:hover,
  .navbar-default .navbar-brand:focus {
-     color: #FF5722;//鼠标放在导航链接上文字颜色
+     color: #000000;//鼠标放在导航链接上文字颜色
      background-color: transparent;//鼠标放在导航链接上背景颜色，设为透明，focus是选择器，选择获得焦点的 input 元素
  }
 
  .navbar-default .navbar-nav > li > a {
-     color: #FF5722;//导航下每个li的颜色
+     color: #000000;//导航下每个li的颜色
  }
 
  .navbar-default .navbar-nav > li > a:hover,
@@ -173,9 +174,10 @@ body{
 
 //---------Box---------
  .box {
-      background-image: url("https://ooo.0o0.ooo/2017/06/08/5938ff3a39474.jpg");//背景图片
+      background-image: url("https://ooo.0o0.ooo/2017/06/08/59392e9a058e3.jpg");//背景图片
       //https://ooo.0o0.ooo/2017/05/31/592ed9ee3cebb.jpg
-      background-position: center 60%;//取图的位置
+      //https://ooo.0o0.ooo/2017/06/08/5938ff3a39474.jpg
+      background-position: center 75%;//取图的位置
       background-repeat: no-repeat;//是否设置重复背景，不重复
       background-size: cover;//会保持图像本身的宽高比例，将图片缩放到正好完全覆盖定义背景的区域
       margin-bottom: 50px;//底部外边框50px
@@ -184,8 +186,8 @@ body{
       .box-inner {
           background-color: rgba(250, 250, 250, 0);//背景颜色以及透明度
           padding-bottom: 5px;//底部内边距
-          margin-top: 150px;//顶部外边距
-          margin-bottom: 150px;//底部外边距
+          margin-top: 250px;//顶部外边距
+          margin-bottom: 50px;//底部外边距
       }
 
       .title {
@@ -195,9 +197,9 @@ body{
       }
 
       .slogan {
-          color: #E1F5FE; //文案颜色
+          color: #FAFAFA; //文案颜色
           margin-top: 10px; //顶部外边距
-          margin-bottom: 50px; //底部外边距
+          margin-bottom: 30px; //底部外边距
           text-align: center; //文本居中
           font-size: 25px; //字体大小
           top: 12px;//规定元素的顶部边缘。定义一个定位元素的上外边距边界与其包含块上边界之间的偏移?
@@ -230,7 +232,7 @@ body{
 }
 
 .content-a > text-center > img{
-    width: 660px;//定制图片宽度
+    width: 330px;//定制图片宽度
     height: 32px; //定制图片高度
     clear: both; //下面三行都是设置图片居中
     clear: both;
@@ -266,9 +268,10 @@ h1, h2,  h3, {
     padding-left: 15px;
     padding-right: 15px;
     //margin-bottom: 20px;
-    background-color: #000000;
+    background-color: #F5F5F5;
     //height: 400px;
-    color: #FF5722;
+    //color: #FF5722;
+    color: #000000;
 }
 
 .topspan {
@@ -486,8 +489,8 @@ img{
   padding-top: 25px;
   /* Set the fixed height of the footer here */
   // height: 200px;
-  background-color: #233140;
-  color: white;
+  background-color: #CFD8DC;
+  color: #000000;
   text-align: center;
 
   .footer-content {
