--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -45,6 +45,6 @@
 
       <%= f.input :image, as: :file %>
     </div> -->
-    <%= f.submit "Create Product", class: "btn btn-primary", data: { disable_with: "Submiting..." } %>
+    <%= f.submit "Update Product", class: "btn btn-primary", data: { disable_with: "Submiting..." } %>
   <% end %>
 </div>
