--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -563,8 +563,8 @@ img{
 }
 
 .add-cart-btn{
-  //margin-top: 130px;
-  margin-right: 80px;
+  margin-top: 130px;
+  margin-right: 50px;
 }
 
 .comments-list{
