--- a/app/views/account/products/index.html.erb
+++ b/app/views/account/products/index.html.erb
@@ -18,12 +18,21 @@
     <div class="col-xs-6 col-md-3">
       <div>
         <%= link_to product_path(product) do %>
+          <%# if product.image.present? %>
+          <% if product.photos.present? %>
+            <%= image_tag(product.photos[0].image.thumb.url, class: "thumbnail") %>
+            <%#= image_tag(product.image.thumb.url, class: "thumbnail") %>
+          <% else %>
+            <%= image_tag("http://placehold.it/291x187&text=No Pic", class: "thumbnail") %>
+          <% end %>
+        <% end %>
+        <!-- <%= link_to product_path(product) do %>
           <% if product.image.present? %>
             <%= image_tag(product.image.thumb.url, class: "thumbnail") %>
           <% else %>
             <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
           <% end %>
-        <% end %>
+        <% end %> -->
       </div>
       <div class="product-list-info">
         <%= product.title %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
