--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -18,13 +18,24 @@
       <%= f.input :price %>
     </div>
 
-    <% if @product.image.present? %>
+    <!-- <% if @product.image.present? %>
       <span>目前商品图</span> <br>
       <%= image_tag(@product.image.thumb.url) %>
+    <% end %> -->
+    <% if @product.photos.present? %>
+      <span>目前商品图</span> <br>
+      <% @product.photos.each do |p| %>
+        <%= image_tag p.image.thumb.url %><br>
+      <% end %>
     <% end %>
 
-    <div class="group">
+    <!-- <div class="group">
       <%= f.input :image, as: :file %>
+    </div> -->
+
+    <div class="group">
+      <%= f.label :image %><br>
+      <%= f.file_field :imgae, :multiple => true, name: "photos[image][]" %>
     </div>
 
     <!--分类项 -->
@@ -45,6 +56,6 @@
 
       <%= f.input :image, as: :file %>
     </div> -->
-    <%= f.submit "Create Product", class: "btn btn-primary", data: { disable_with: "Submiting..." } %>
+    <%= f.submit "Update Product", class: "btn btn-primary", data: { disable_with: "Submiting..." } %>
   <% end %>
 </div>
