--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -24,10 +24,12 @@
         </td>
         <td>
           <%= link_to product_path(p) do %>
-            <% if p.image.present? %>
-              <%= image_tag(p.image.thumb.url, class: "thumbnail") %>
+            <%# if p.image.present? %>
+            <% if p.photos.present? %>
+              <%#= image_tag(p.image.thumb.url, class: "thumbnail") %>
+              <%= image_tag(p.photos[0].image.thumb.url, class: "thumbnail") %>
             <% else %>
-              <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
+              <%= image_tag("http://placehold.it/291x187&text=No Pic", class: "thumbnail") %>
             <% end %>
           <% end %>
         </td>
