--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -19,8 +19,14 @@
       <%= f.input :price %>
     </div>
 
-    <div class="group">
+    <!-- <div class="group">
       <%= f.input :image, as: :file %>
+    </div> -->
+
+    <div class="group">
+      <%#= f.input :image, as: :file %>
+      <%= f.label :image %><br>
+      <%= f.file_field :image, :multiple => true, name: "photos[image][]" %>
     </div>
 
     <!--分类项 -->
