--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,23 +1,40 @@
 <div class="row product-info">
   <div class="col-md-6">
-    <% if @product.image.present? %>
+    <!-- <% if @product.image.present? %>
       <%= image_tag(@product.image.medium.url, class: "thumbnail") %>
     <% else %>
       <%= image_tag("http://plachhold.it/400x400&text=No Pic", class: "thumbnail") %>
-    <% end %>
+    <% end %> -->
+    <% if @photos.present? %>
+       <% @photos.each_with_index do |p, index| %>
+         <% if index == 0 %>
+           <%= image_tag p.image.medium.url %>
+           <!-- <div style="letter-spacing: -8px"> -->
+           <div style="width: 600px;">
+         <% else %>
+          <div style="float:left; margin-left:4px;  margin-right:4px; margin-top:3px">
+            <%= image_tag p.image.thumb.url %>
+          </div>
+         <% end %>
+       <% end %>
+       </div>
+     <% else %>
+         <%= image_tag("http://placehold.it/600x400&text=No Pic", class: "thumbnail") %>
+     <% end %>
+
   </div>
   <div class="col-md-6">
     <h2><%= @product.title %></h2>
     <div style="height:100px;">
       <p>
-        <%= @product.description %>
+        特点：<%= @product.description %>
       </p>
     </div>
     <div style="height:250px;">
-      <div> 已付款：<%= @product.sale_quantity %>次</div>
-      <p></p>
       <div class="product-price">
-        ¥<%= @product.price %> 元/天
+        价格：<%= @product.price %> 元/天
+        <br>
+        已销售：<%= @product.sale_quantity %>次
         <p>
           <br>
           <!-- 收藏按钮显示 -->
